# TUICord

./: LICENSE  README.md  pyproject.toml
tuicord/: main.py  utils.py
tuicord/components/: __init__.py  channel_message.py  channels_tree.py  input_box.py  server_button.py
tuicord/core/: __init__.py  discord_client.py  interface.py  tui_interface.py
tuicord/core/styles/: style.css
